reflect-demo/src/tests/snapshots/reflect_demo__tests__serde__struct_rename_differently.snap
---
source: reflect-demo/src/tests/serde.rs
expression: "super::into_schema::<TestStructRenameDifferently>()"
---
{
  "name": "",
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::serde::MyStructInput"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::serde::MyStructOutput"
      }
    ]
  }
}
