reflect-demo/src/tests/snapshots/reflect_demo__tests__serde__struct_try_from.snap
---
source: reflect-demo/src/tests/serde.rs
expression: "super::into_schema::<TestStructTryFormProxy>()"
---
{
  "name": "",
  "functions": [
    {
      "name": "",
      "input_type": {
        "name": "reflect_demo::tests::serde::TestStructTryFormProxy"
      },
      "output_type": {
        "name": "reflect_demo::tests::serde::TestStructTryFormProxy"
      },
      "serialization": [
        "json"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::serde::TestStructTryFormProxy",
        "fields": [
          {
            "name": "0",
            "type": {
              "name": "reflect_demo::tests::serde::TestStructTryFrom"
            }
          }
        ],
        "transparent": true
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::serde::TestStructTryFrom",
        "fields": [
          {
            "name": "f",
            "type": {
              "name": "u8"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::serde::TestStructTryFormProxy",
        "fields": [
          {
            "name": "f",
            "type": {
              "name": "u8"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
